--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Mentor | IP Address Tracker</title>
+    <title>IP Address Tracker</title>
   </head>
   <body>
     <div id="app"></div>
-    <p>hello world</p>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
