--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/types/main.ts"></script>
+    <script type="module" src="https://github.com/vwdr/IP-Tracker/src/types/main.ts"></script>
   </body>
 </html>
