--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="./images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IP Address Tracker</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="https://github.com/vwdr/IP-Tracker/blob/main/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
